--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "tinify": "^1.6.0-beta.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0"
   }
 }
