--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "image-size": "^0.9.3",
     "tinify": "^1.6.0-beta.2"
   },
   "devDependencies": {
